--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,33 +18,73 @@ body {
 	height:100%;
 	margin: 0px auto;
 	padding:0px;
-	background-color: #FFEEEE;
+	background-color:#D8D8D8;
 	/*background-image: url(background.png);*/
 }
 section {
-	margin: inherit;
+	margin:0 auto;
 	width:900px;/*ширина section и footer должна быть одинаковой*/
 	min-height:100%;
-	background-color:#F4FA58;
+	background-color:white;
 }
 header {
+	width:100%;
 	height: 90px;
 	/*border-radius: 100px 30px;*/
-	background-color:#F5A9F2;
+	background-color:#FF5D40;
+	opacity: 0.9;
 }
 nav {
+	background-color:#E165B9;
 	/*border: 2px solid;*/
-	float: right;
-	margin:40px 35px 5px 5px;
+	margin:2px auto;
+	/*min-width:250px;*/
 }
 footer {
 	margin: inherit;
 	width: 900px;/*ширина равна ширине section*/
-	background-color:#00FF80;
+	background-color:#E165B9;
 	/*border-radius: 100px 30px;*/
-	height:70px;
-	margin-top:-70px;/*значение минус высота footer*/
+	height:40px;
+	margin-top:-40px;/*значение минус высота footer*/
 }
 #height_footer {
-	height:70px;
+	height:40px;/*высота footer*/
+}
+#background_header {
+	position:absolute;
+	width:100%;
+	height: 90px;
+	background-color:#FF5D40;
+	opacity: 0.6;
+}
+#yield {
+	background-color:white;
+	margin:0;
+}
+ul.menu {
+	list-style:none;
+	width:100%;
+	height:35px;
+	margin: 0;
+	padding: 0;
+}
+ul.menu li {
+	float:left;
+	border-right: 2px solid white;
+}
+ul.menu li a {
+	display:block;
+	height:35px;
+	padding:0 35px;
+	float:left;
+	text-transform: uppercase;
+	font:75%/35px Helvetica,"microsoft sans serif",arial,sans-serif;
+	color:#fff;
+	text-decoration:none;
+	text-align:center;
+}
+ul.menu li a:hover,
+ul.menu li.active a{
+	background-color:#BE008A;
 }
