--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,10 +64,11 @@ footer {
 }
 ul.menu {
 	list-style:none;
-	width:100%;
+	width:624px; /*ширина всех ссылок*/
 	height:35px;
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
+	border-left: 2px solid white;
 }
 ul.menu li {
 	float:left;
