--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 	<div id="background_header"></div>
 	<section>
 		<header>
-			<div style="padding: 5px 30px;"><%= image_tag("sms.png", :size => "80x80", :style => "margin:0;padding:0;")%></div>
+			<div style="padding: 5px 30px;float: left;"><%= image_tag("sms.png", :size => "80x80", :style => "margin:0;padding:0;")%></div>
+			<span style="font: bold 300%/90px Impact  sans-serif;color: #D8D8D8">Services</span>
 		</header>
 		<nav>
 			<ul class="menu">
@@ -21,7 +22,7 @@
     			<li><a href="#">FAQ</a></li>
 			</ul>
 		</nav>
-		<%= yield %>
+		<div style="margin: 0 auto;text-align: center;"><%= yield %></div>
 		<div id="height_footer"></div>
 	</section>
 	<footer>
