Finish registartion form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     			<li><a href="#">FAQ</a></li>
 			</ul>
 		</nav>
-		<div style="margin: 0 auto;text-align: center;"><%= yield %></div>
+		<div id="content" style="margin: 0 auto;text-align: center;"><%= yield %></div>
 		<div id="height_footer"></div>
 	</section>
 	<footer>
