--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,1 @@
-<h3>Добро пожаловать на сайт <span style="color:red;">"SMS Services"</span></h3>
+<h3>Добро пожаловать на сайт <span style="color:red;">"SMS Сервисы"</span></h3>
