--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
-<h1>Здравствуйте <%= @user.name %></h1>
+<% if flash[:notice] %>
+	<div class="notice"><%= flash[:notice] %></div>
+<% end %>
+<h1>Здравствуйте <%= @user.name %></h1><br />
+<h1>Ваш id=<%= session[:id] %></h1>
