--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,4 @@
-<br /><br />
-<span style="font: bold 300%/50px Impact  sans-serif;color: #6E6E6E">Регистрация</span>
+<div class="the_title_of_page">Регистрация</div>
 <div class="form_for">
 	<%= form_for :user, :url => { :action => :create} do |f| %>
 		<%= f.label "Имя" %><br />
