--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,1 @@
-<h3>Добро пожаловать на сайт <span style="color:red;">"SMS Сервисы"</span></h3>
+<div class="the_title_of_page">Добро пожаловать на сайт <span style="color:red;">"SMS Сервисы"</span></h3>
