--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,3 +140,27 @@ div.form_for input {
 	margin:15px auto;
 	color:green;
 	font-size:13px;
+}
+.the_title_of_page {
+	font: bold 200%/45px Impact  sans-serif;
+	color: #6E6E6E;
+	padding:30px 0 15px 0;
+}
+#menu_header {
+	list-style:none;
+}
+#menu_header li {
+	float:left;
+	padding:0 10px;
+	margin:0 5px;
+	border: 1px solid #424242;
+	background-color:#D8D8D8;
+}
+#menu_header li a {
+	text-decoration:none;
+	color:#B404AE;
+}
+#menu_header li a:hover,
+#menu_header li.active a{
+	color:white;
+}
