--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,14 @@
 		<header>
 			<div style="padding: 5px 30px;float: left;"><%= image_tag("sms.png", :size => "80x80", :style => "margin:0;padding:0;")%></div>
 			<span style="font: bold 300%/90px Impact  sans-serif;color: #D8D8D8;">Сервисы</span>
-			<div style="text-align: right;float: right;margin: 60px 40px 5px 0px">
+			<div style="text-align: right;float: right;margin: 45px 25px 5px 0px">
 				<ul id="menu_header">
-					<li><%= link_to "Главная", signin_path %></li>
+					<li><%= link_to "Главная", root_path %></li>
 					<% if session[:id] %>
 						<li><%= link_to "Выйти", signout_path %></li>
 					<% end %>
 					<% unless session[:id] %>
-						<li><%= link_to "Войти", :controller => :sessions, :action => :new %></li>
+						<li><%= link_to "Войти", signin_path %></li>
 						<li><%= link_to "Регистрация", new_user_path %></li>
 					<% end %>
 				</ul>
