--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,3 +28,4 @@
 		<%= f.submit "Зарегистрироваться"%>
 	<%end%>
 </div>
+<p style="border: 1px solid pink;padding: 5px;width: 500px;margin: 0 auto 10px;font-size: 13px">Если вы зарегистрированый пользователь, для входа перейдите по <%= link_to "ссылке", signin_path %></p>
