--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 			<ul class="menu">
 				<li><%= link_to "Главная", root_path %></li>
     			<li><%= link_to "Моя информация", user_path(session[:id]? session[:id]:0) %></li>
-    			<li><a href="#">Отправить SMS</a></li>
+    			<li><%= link_to "Отправить SMS", :controller => :send_sms, :action => :new, :user_id => session[:id]? session[:id]:0 %></li>
    			 	<li><a href="#">Уведомления</a></li>
     			<li><a href="#">Управление персоналом</a></li>
     			<li><a href="#">О сайте</a></li>
