--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,9 @@
 				<li><%= link_to "Главная", root_path %></li>
     			<li><%= link_to "Моя информация", user_path(session[:id]? session[:id]:0) %></li>
     			<li><%= link_to "Отправить SMS", :controller => :send_sms, :action => :new, :user_id => session[:id]? session[:id]:0 %></li>
-   			 	<li><a href="#">Уведомления</a></li>
+   			 	<li><%= link_to "Уведомления", user_reminders_path(:user_id => session[:id]? session[:id]:0) %></li>
     			<li><a href="#">Управление персоналом</a></li>
-    			<li><a href="#">О сайте</a></li>
+    			<li><%= link_to "О сайте", about_path %></li>
 			</ul>
 		</nav>
 		<div id="content" style="margin: 0 auto;text-align: center;"><%= yield %></div>
