--- a/app/views/send_sms/index.html.erb
+++ b/app/views/send_sms/index.html.erb
@@ -1,7 +1,7 @@
 <div class="the_title_of_page">История отправленных СМС</div>
 <div style="margin: 20px auto 50px">
 	<% if @smses.size == 0 %>
-		<p style="margin-top: 50px;font-size: 17px;">Вы не имеете истории отправленных сообщений, вернуться <%= link_to "назад", :controller => :send_sms, :action => :new, :user_id => session[:id] %></p>
+		<p style="margin-top: 50px;font-size: 17px;">Вы не имеете истории отправленных сообщений</p>
 	<% else %>
 		<table align="center">
 			<tr>
@@ -15,8 +15,8 @@
 				<td><%= msg.phone_number %></td>
 				<td><%= msg.message %></td>
 				<td><%= msg.status ? "Отправлено" : "Не отправлено" %></td>
-				<td><%= msg.created_at %></td>
-				<td><%= link_to "Удалить", {:controller => :send_sms, :action => :destroy, :user_id => session[:id], :id => msg.id}, :method => :delete %></td>
+				<td><%= msg.created_at.getlocal.to_s[0..-7] %></td>
+				<td><%= link_to image_tag("error.png", :size => "20x20", :style => "margin:0;padding:0;"), {:controller => :send_sms, :action => :destroy, :user_id => session[:id], :id => msg.id}, :method => :delete %></td>
 			</tr>
 			<% end %>
 		</table>
