--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,1 +1,15 @@
 <div class="the_title_of_page">О сайте</div>
+<div style="border: 1px solid pink; margin: 20px;padding: 10px 30px" align="justify">
+	<span style="margin-left: 20px">М</span>еня зовут Гричковский Тарас и этот сайт является моим дипломным проектом
+	на тему "Разработка корпоративных интернет ресурсов с SMS сервисами". Во время написания сайта, я использовал 
+	такие технологии: HTML, CSS, JavaScript, Ruby on Rails, git. Если кого-то заинтересует разработка сайтов на Ruby on Rails,
+	я могу посоветовать такие ресурсы, которые мне очень помогли во время разработки сайта:
+	<ul>
+		<li><a href="http://rusrails.ru/">Ruby on Rails по-русски: Rusrails</a></li>
+		<li><a href="http://railstutorial.ru/"‎>Изучение Веб Разработки с Ruby on Rails Tutorial</a></li>
+		<li><a href="http://htmlbook.ru/">htmlbook.ru - Для тех, кто делает сайты</a></li>
+	</ul>
+	Если у вас есть предложения, замечания или интересуют моменты реализации данного сайта пишите мне на
+	E-mail <a href="mailto:smayzer@bigmir.net">smayzer@bigmir.net</a><br /><br />
+	<span style="margin-left: 20px;">П</span>риятного пользования сайтом :-)
+</div>
