--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,43 @@
-<div class="the_title_of_page">Добро пожаловать на сайт <span style="color:red;">"SMS Сервисы"</span></h3>
+<div class="the_title_of_page">Добро пожаловать на сайт <span style="color:red;">"SMS Сервисы"</span></div>
+<div style="border: 2px solid #FF5600;
+			margin: 10px 20px 10px 50px;
+			padding: 10px 20px;
+			background-color: #FFA273;
+			color: white;"
+			align="justify">
+	<span style="margin-left: 20px">З</span>дравствуйте, здесь Вы сможете отправлять СМС любому, кто имеет мобильный телефон, без надобности набирать текст сообщения
+	с помощью неудобной клавиатуры телефона. Также вы имеете возможность создать напоминание, чтобы не забыть о важных
+	встречах и событиях. Если вам нужно управлять некоторой группой людей, с помощью этого сайта вы сможете очень быстро
+	и легко информировать своих подчиненных о заданиях, которые им нужно выполнить.
+</div>
+<div style="border: 2px solid #EC0033;
+			margin: 10px 50px 10px 20px;
+			padding: 10px 20px;
+			background-color: #F56E8B;
+			color: white;"
+			align="justify">
+	<span style="margin-left: 20px">О</span>тправка СМС. С помощью этой функции у вас есть возможность отправлять СМС сообщения любому человеку, который имеет 
+	мобильный телефон с номером пренадлежащим украинскому оператору связи. Все что вам нужно это номер телефона
+	и конечно же сам текс сообщения :-) 
+</div>
+<div style="border: 2px solid #FF5600;
+			margin: 10px 20px 10px 50px;
+			padding: 10px 20px;
+			background-color: #FFA273;
+			color: white;"
+			align="justify">
+	<span style="margin-left: 20px">У</span>ведомления - позволят вам больше не пропускать важные события и мероприятия. Создавать их так же просто как
+	и отправлять СМС сообщения. Эдинственная разница заключается в том что вам необходимо указать дату и время в 
+	которое вы хотите получить уведомление.
+</div>
+<div style="border: 2px solid #EC0033;
+			margin: 10px 50px 10px 20px;
+			padding: 10px 20px;
+			background-color: #F56E8B;
+			color: white;"
+			align="justify">
+	<span style="margin-left: 20px">Е</span>сли по роду своей деятельности вам необходимо управлять определенной группой людей, тогда функция
+	"Управление персоналом" может облегчит вам жизнь. Она позволит вам быстро информировать ваших подчиненных
+	о заданиях или проишествиях которые случились. Вам нужно всего лишь внести всех своих подчиненных
+	к себе в список и все! 
+</div>
